tests/toy/neg/001636_mutation.toylang
program a = { while a do sleep var; } .
